// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommentCard Tests it matches snapshot 1`] = `
<Fragment>
  <div
    id="comments-view"
  >
    <div
      className="comment-body"
    >
      Thanks
    </div>
    <div
      className="comment-footer"
    >
      <img
        alt="userImage"
        src="http://res.cloudinary.com/dbsxxymfz/image/upload/v1541429992/es8jfxtycdfjvec6ha1a.png"
      />
      <p
        className="userName"
      >
        <Link
          replace={false}
          to="/users/11"
        >
          JAY OBI
        </Link>
      </p>
      <p
        className="time-ago"
      >
        5 days ago
      </p>
    </div>
  </div>
</Fragment>
`;

exports[`CommentCard Tests it renders username when firstname and lastname are undefined 1`] = `
<Fragment>
  <div
    id="comments-view"
  >
    <div
      className="comment-body"
    >
      Thanks
    </div>
    <div
      className="comment-footer"
    >
      <img
        alt="userImage"
        src="https://res.cloudinary.com/dbsxxymfz/image/upload/v1536757459/dummy-profile.png"
      />
      <p
        className="userName"
      >
        <Link
          replace={false}
          to="/users/11"
        >
          undefined undefined
        </Link>
      </p>
      <p
        className="time-ago"
      >
        5 days ago
      </p>
    </div>
  </div>
</Fragment>
`;
